--- a/src/assets/css/common.styl
+++ b/src/assets/css/common.styl
@@ -565,7 +565,7 @@ btn-color =  #F77583
     line-height 48px!important
 
 .el-breadcrumb__separator[class*=icon]
-  line-height 48px!important
+  line-height 42px!important
   color #999!important
 .el-breadcrumb__inner
 .el-breadcrumb__inner a
@@ -1023,3 +1023,7 @@ btn-color =  #F77583
     line-height 50px
     border-radius 25px
     font-size 20px
+
+
+.bd_weixin_popup
+  box-sizing content-box
