--- a/src/assets/css/reset.styl
+++ b/src/assets/css/reset.styl
@@ -53,7 +53,7 @@ td,th
 /* HTML5 display-role reset for older browsers */
 body ,html
   font-size: 12px;
-  font-family: "STXihei","Microsoft YaHei",Arial,sans-serif,"Helvetica Neue", Helvetica , "Hiragino Sans GB";
+  font-family: "Microsoft YaHei",Arial,sans-serif,"Helvetica Neue", Helvetica , "Hiragino Sans GB";
   color: #333;
   line-height: 1.5;
   min-height 100%;
